--- a/Session 8/Major Project - Task Manager/frontend/index.html
+++ b/Session 8/Major Project - Task Manager/frontend/index.html
@@ -15,7 +15,31 @@
         <h1>Task-Manager</h1>
     </header>
 
+    <div class="auth-section">
+        <!-- Login Form -->
+        <form class="login-form">
+            <h2>Login</h2>
+            <input type="text" id="login-username" placeholder="Username" required>
+            <input type="password" id="login-password" placeholder="Password" required>
+            <button type="submit">Login</button>
+            <p>Don't have an account? <button type="button" class="show-register">Register</button></p>
+        </form>
 
+            <!-- Register Form -->
+        <form class="register-form" style="display: none;">
+            <h2>Register</h2>
+            <input type="text" id="register-username" placeholder="Username" required>
+            <input type="email" id="register-email" placeholder="Email" required>
+            <input type="password" id="register-password" placeholder="Password" required>
+            <button type="submit">Register</button>
+            <p>Already have an account? <button type="button" class="show-login">Login</button></p>
+        </form>
+    </div>
+
+
+    <div class="task-section">
+        <button class="logout-btn">Logout</button>
+    
     <input type="text" class="search" placeholder="Search task">
 <br>
 <br>
@@ -50,6 +74,8 @@
 
     <div class="task-container">
         <ul class="task-list"></ul>
+    </div>
+
     </div>
 
     <script src="./app.js"></script>
