--- a/Session 8/Major Project - Task Manager/frontend/index.html
+++ b/Session 8/Major Project - Task Manager/frontend/index.html
@@ -44,7 +44,7 @@
 <br>
 <br>
 
-    <form action="">
+    <form action="" class="task-form">
         <input type="text" class="task-input" placeholder="Your Task">
         <input type="text" class="task-desc-input" placeholder="Task description">
         <input type="date" class="due-date-input" placeholder="">
@@ -57,6 +57,7 @@
 
         <div class="priority">
             <select name="tasks" class="sort-tasks">
+                <option value="all">All</option>
                 <option value="high">High</option>
                 <option value="medium">Medium</option>
                 <option value="low">Low</option>
